Update Content for 1501-SHAP

--- a/shap/1501-SHAP.md
+++ b/shap/1501-SHAP.md
@@ -41,7 +41,7 @@ Look at how SHAP assigns every feature a weight/importance score:
 
 SHAP builds model explanations by asking the same question for every prediction and feature:
 
-“How does prediction `i’ change when feature `j` is removed from the model?”
+“How does prediction `i` change when feature `j` is removed from the model?”
 
 The so-called _**SHAP values**_ are the answers.
 
@@ -74,7 +74,7 @@ Understanding all the bricks that make up a SHAP explanation is essential.
 The parameters are different for each type of model. Usually, the model and training data must be provided, at a minimum.
 * **base value (explainer.expected_value):** $E(\hat y)$ is “the value that would be predicted if we didn’t know any features of the current output.” It is the mean of $y$ for the training data set or the background set. We can call it “reference value”; it’s a scalar.
 * **SHAPley values (explainer.shap_values(x)):** the average contribution of each feature to each prediction for each sample based on all possible features. It is an $n \times m$ matrix that represents the contribution of each feature to each sample.
-* **output value (for a sample):** the value predicted by the algorithm (the model's probability, logit, or raw output values).
+* **output value (for a sample):** the value predicted by the algorithm (the model’s probability, logit, or raw output values).
 * **display features ($n \times m$):** a matrix of original values — before transformation/encoding/engineering of features, etc. — that can be provided to some graphs to improve interpretation. They are often overlooked and essential for interpretation.
 
 There’s NO need to worry if you don’t understand all these terms completely. If you want to understand the meaning of something during the implementation, you can come back and refer to this.
@@ -123,9 +123,9 @@ Explainers are the models used to calculate shapley values. The diagram below sh
 
 The choice of Explainers depends mainly on the selected learning model:
 
-* The **“Linear Explainer”** is used for linear models.
-* For decision trees and “set” type models — **“Tree Explainer”** can be used. In addition, the “Tree Explainer” allows displaying the interaction values. It also allows transforming the model output into probabilities or log-loss, which is helpful for a better understanding of the model or for comparing several models.
-* **“Kernel Explainer”** can be used on all models — either tree or non-tree based. However, it is slower than the explainers mentioned above. It creates a model that substitutes the closest to our model. We can also use it to explain neural networks.
+* The **Linear Explainer** is used for linear models.
+* For decision trees and set-type models — **Tree Explainer** can be used. In addition, the Tree Explainer allows displaying the interaction values. It also allows transforming the model output into probabilities or log-loss, which is helpful for a better understanding of the model or for comparing several models.
+* **Kernel Explainer** can be used on all models — either tree or non-tree based. However, it is slower than the explainers mentioned above. It creates a model that substitutes the closest to our model. We can also use it to explain neural networks.
 * For deep learning models, there are the **Deep Explainer** and the **Gradient Explainer.**
 * All the explainers are explained in detail here: [https://shap.readthedocs.io/en/latest/examples.html#general](https://shap.readthedocs.io/en/latest/examples.html#general)
 
