Update Content for 1501-SHAP

--- a/shap/1501-SHAP.md
+++ b/shap/1501-SHAP.md
@@ -58,7 +58,7 @@ They quantify the magnitude and direction (positive or negative) of a feature’
 
 1. **Computation time:** Number of possible combinations of the features exponentially increases as more features are added. This, in turn, increases the turnaround time of calculating SHAP values, and approximation is the only solution.
 2. **Order of feature selection in all possible combinations:** Typically, while solving real-world problems, the target is non-linearly related to the independent features, and there is some correlation amongst the independent features too. In such cases, the selected features’ order matters and can impact the SHAP values.
-3. **Simulation of scenarios:** SHAP doesn’t return a model like LIME. So if you want to simulate scenarios to see how much an increase in a particular feature impacts the output, then it’s impossible with SHAP.
+3. **Simulation of scenarios:** SHAP doesn’t return a model like LIME. So if you want to simulate scenarios to see how much an increase in a particular feature impacts the output, SHAP cannot be used.
 4. **Correlation amongst independent features:** Again, the independent features will be correlated in most real-world problems. In such situations, when we sample from the feature’s marginal distribution, there can be instances generated that might not be possible in the real world.
 
 
